[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/Mulish/Mulish-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Fredoka_One/FredokaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://sounds/sounds/button-click.mp3" type="AudioStream" id=4]
[ext_resource path="res://images/fondo1_png/Wallpaper.tres" type="Texture" id=5]
[ext_resource path="res://images/fondo1_png/ButtonTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="TextureRect" type="TextureRect" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -250.0
margin_right = 2390.0
margin_bottom = 1382.0
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -300.0
margin_right = 448.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelButtonContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 896.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/LabelButtonContainer"]
margin_right = 896.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/line_spacing = -100
custom_fonts/font = SubResource( 1 )
text = "Settings
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="MarginContainer/LabelButtonContainer"]
margin_top = 208.0
margin_right = 896.0
margin_bottom = 256.0
size_flags_vertical = 1
custom_constants/line_spacing = -30
custom_fonts/font = SubResource( 2 )
text = "Master Volume
"

[node name="Master Slider" type="HSlider" parent="MarginContainer/LabelButtonContainer"]
margin_top = 260.0
margin_right = 896.0
margin_bottom = 276.0
size_flags_vertical = 1
min_value = -45.0
max_value = 0.0

[node name="Label3" type="Label" parent="MarginContainer/LabelButtonContainer"]
margin_top = 280.0
margin_right = 896.0
margin_bottom = 319.0
custom_fonts/font = SubResource( 4 )
text = "Music"

[node name="HSlider" type="HSlider" parent="MarginContainer/LabelButtonContainer"]
margin_top = 323.0
margin_right = 896.0
margin_bottom = 339.0
min_value = -45.0
max_value = 0.0

[node name="Label4" type="Label" parent="MarginContainer/LabelButtonContainer"]
margin_top = 343.0
margin_right = 896.0
margin_bottom = 382.0
custom_fonts/font = SubResource( 5 )
text = "SFX"

[node name="HSlider2" type="HSlider" parent="MarginContainer/LabelButtonContainer"]
margin_top = 386.0
margin_right = 896.0
margin_bottom = 402.0
min_value = -45.0
max_value = 0.0

[node name="Back" type="Button" parent="MarginContainer/LabelButtonContainer"]
margin_top = 406.0
margin_right = 896.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Back"
icon_align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="value_changed" from="MarginContainer/LabelButtonContainer/Master Slider" to="." method="_on_Master_Slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/LabelButtonContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/LabelButtonContainer/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="MarginContainer/LabelButtonContainer/Back" to="." method="_on_Back_pressed"]
